<resources>
    <string name="app_name">PajoheshGram</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ali Booresh</string>
    <string name="nav_header_subtitle">+98 903 199 9665</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_add_account">Add Account</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_new_group">New Group</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_call">Call</string>
    <string name="menu_saved_messages">Saved Message</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_pajohesh_gram_features">PajoheshGram Features</string>
    <string name="search">Search...</string>
    <string name="save">Save</string>
    <string name="status">Status</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_name">Contact name</string>
    <string name="bio">Bio</string>
    <string name="username">Username</string>
    <string name="birth_date">Birth Date</string>
    <string name="user_id">User ID</string>
    <string name="save_changes">Save Changes</string>
    <string name="register">Register</string>
</resources>