<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_account"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_add_account" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_my_profile" />
        <item
            android:id="@+id/nav_new_group"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_new_group" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_call" />
        <item
            android:id="@+id/nav_saved_messages"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_saved_messages" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_setting" />
    </group>
    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_pajohesh_gram_features"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_pajohesh_gram_features" />
    </group>
</menu>